little fixes with scrollbar and segment divs

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -177,6 +177,7 @@ input:checked + .slider:before {
       justify-content: space-between;
       font-weight: 400;
       font-size: 20px;
+      padding: 0px 5px;
     }
   }
 }
